# webrtc-gstreamer

./: CMakeLists.txt  cert.pem  generate_cert.sh  key.pem  session_client.py  signaling_server.py  webrtc-sendrecv.cpp
static/js/: webrtc.js
templates/: index.html
